--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function MM_swapImage() { //v3.0
    </div>
    <div data-role="footer" align="center" data-theme="a" data-position="fixed">
       <div>
-        <img src="imagenes/icono.png" width="46" height="46">
+        <img src="res/android/mdpi.png" width="46" height="46">
        </div>
        <div>
          <h4>Aplicación Tres</h4>
